Added AddressBookInterface.php as contract, Language int

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,9 @@
 #index:
 #    path: /
 #    defaults: { _controller: 'App\Controller\DefaultController::index' }
+
+index:
+    path: /{_locale}/address/book
+    defaults: {_controller: AppBundle:AddressBookController:index }
+    requirements:
+        _locale: en|fr|de
